--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
+    "seed:presets": "node src/scripts/seedPresets.js",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
