--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "daisyui": "^5.3.10",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.12",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
